--- a/index.html
+++ b/index.html
@@ -603,5 +603,95 @@
         </div>
       </div>
     </footer>
+    <!--BackDrob-->
+    <div class="backdrop">
+      <div class="modal">
+        <button class="modal-close-btn" type="button">
+          <svg
+            class="close-button-icon"
+            width="8"
+            height="8"
+            aria-label="Close window"
+          >
+            <use
+              href="./images/icons-for-form/form-icons.svg#icon-close-btn"
+            ></use>
+          </svg>
+        </button>
+        <p class="form-title">Leave your contacts and we will call you back</p>
+        <form class="callback-form" action="#">
+          <div class="form-box">
+            <label class="form-label" for="user-name">Name</label>
+            <div class="position-svg">
+              <input
+                id="user-name"
+                type="text"
+                name="user-name"
+                class="form-input"
+              />
+              <svg class="input-svg-icon" width="18" height="24">
+                <use
+                  href="./images/icons-for-form/icons.svg#icon-person-black"
+                ></use>
+              </svg>
+            </div>
+          </div>
+          <div class="form-box">
+            <label class="form-label" for="phone">Phone</label>
+
+            <div class="position-svg">
+              <input class="form-input" id="phone" type="text" name="phone" />
+              <svg class="input-svg-icon" width="18" height="24">
+                <use href="./images/icons-for-form/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="form-box">
+            <label class="form-label" for="email">Email</label>
+
+            <div class="position-svg">
+              <input class="form-input" id="email" type="text" name="email" />
+              <svg class="input-svg-icon" width="18" height="24">
+                <use href="./images/icons-for-form/icons.svg#icon-letter"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="form-box textarea-box">
+            <label class="form-label" for="user-comment">Comment</label>
+            <textarea
+              class="textarea-input"
+              id="user-comment"
+              name="user-comment"
+              cols="10"
+              rows="5"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+
+          <div class="callback-checkbox">
+            <input
+              id="user-privacy"
+              type="checkbox"
+              value="true"
+              name="user-privacy"
+              class="checkbox-input visually-hidden"
+            />
+            <label class="checkbox-policy" for="user-privacy"
+              ><span class="checkbox-icon"
+                ><svg class="checkbox-svg" width="10" height="8">
+                  <use
+                    href="./images/icons-for-form/icons.svg#icon-checkbox"
+                  ></use></svg></span
+              >I accept the terms and conditions of the<a class="policy-link"
+                >Privacy Policy</a
+              ></label
+            >
+          </div>
+          <button class="form-button" type="submit">Send</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
