--- a/index.html
+++ b/index.html
@@ -601,6 +601,32 @@
             </li>
           </ul>
         </div>
+        <div class="footer-container-form">
+          <p class="footer-form-text">Subscribe</p>
+          <form class="footer-form" name="email">
+            <label class="form-label">
+              <input
+                class="form-input"
+                type="email"
+                name="email"
+                placeholder="E-mail"
+              />
+            </label>
+            <button class="button-footer-form" type="submit">
+              Subscribe
+              <svg
+                class="icon-subscribe"
+                width="24"
+                height="24"
+                aria-label="subscribe"
+              >
+                <use
+                  href="./images/icons-for-form/icons.svg#icon-airplane-footer"
+                ></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
     <!--BackDrob-->
@@ -613,9 +639,7 @@
             height="8"
             aria-label="Close window"
           >
-            <use
-              href="./images/icons-for-form/form-icons.svg#icon-close-btn"
-            ></use>
+            <use href="./images/icons-for-form/icons.svg#icon-close-btn"></use>
           </svg>
         </button>
         <p class="form-title">Leave your contacts and we will call you back</p>
@@ -682,7 +706,7 @@
               ><span class="checkbox-icon"
                 ><svg class="checkbox-svg" width="10" height="8">
                   <use
-                    href="./images/icons-for-form/icons.svg#icon-checkbox"
+                    href="./images/icons-for-form/icons.svg#icon-property"
                   ></use></svg></span
               >I accept the terms and conditions of the<a class="policy-link"
                 >Privacy Policy</a
