--- a/index.html
+++ b/index.html
@@ -706,7 +706,7 @@
               ><span class="checkbox-icon"
                 ><svg class="checkbox-svg" width="10" height="8">
                   <use
-                    href="./images/icons-for-form/icons.svg#icon-property"
+                    href="./images/icons-for-form/icons.svg#icon-galochka"
                   ></use></svg></span
               >I accept the terms and conditions of the<a class="policy-link"
                 >Privacy Policy</a
