--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@
           <form class="footer-form" name="email">
             <label class="form-label">
               <input
-                class="form-input"
+                class="form-input-footer"
                 type="email"
                 name="email"
                 placeholder="E-mail"
